--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "dev-snack",
-  "version": "0.0.1",
+  "name": "basic-ssr",
+  "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js",
-    "dev:react": "webpack-dev-server --watch --open --config webpack.common.js",
-    "dev:build": "webpack --watch --display-error-details --config webpack.dev.js",
-    "dev:server": "webpack --watch --display-error-details --config webpack.server.js",
-    "dev": "yarn dev:build & yarn dev:server",
-    "server": "nodemon ./dist/server.js"
+    "build": "yarn lint && webpack --config webpack.prod.js",
+    "build:net": "webpack --config webpack.prod.net.js",
+    "dev:build": "webpack --watch --config webpack.dev.js",
+    "dev:server": "webpack --watch --config webpack.server.js",
+    "ssr-client": "concurrently \"yarn dev:build\" \"yarn dev:server\"",
+    "ssr-server": "nodemon  ./assets/local/server.js",
+    "lint": "tslint -c tslint.json 'src/**/*.{js,ts,tsx}'"
   },
   "author": {
     "name": "Ludovit Kapusta",
@@ -18,29 +17,37 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@types/react-router-dom": "^4.3.4",
+    "@types/styled-components": "^4.1.18",
     "express": "^4.16.4",
-    "file-loader": "^3.0.1",
-    "nodemon": "^1.18.10",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "webpack-node-externals": "^1.7.2"
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/webpack": "^4.4.21",
+    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.0",
+    "concurrently": "^4.1.1",
+    "dotenv-webpack": "^1.7.0",
+    "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.10",
     "prettier": "1.15.3",
     "source-map-loader": "^0.2.4",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.3.2",
     "ts-loader": "^5.3.1",
     "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react-hooks": "^2.0.0",
     "typescript": "^3.2.2",
+    "typescript-plugin-styled-components": "^1.4.3",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
