--- a/package.json
+++ b/package.json
@@ -1,53 +1,112 @@
 {
   "name": "basic-ssr",
+  "engines": {
+    "node": "12.14.1"
+  },
   "version": "1.0.0",
-  "description": "React, Typesctript, styled-components and webpack server side rendering app implementation for usage with ReactJS.NET",
+  "description": "React, Typescript, styled-components and webpack server side rendering app implementation for usage with ReactJS.NET",
   "scripts": {
-    "build": "yarn lint && webpack --config webpack.prod.js",
-    "build:net": "webpack --config webpack.prod.net.js",
+    "build": "yarn clean:appData && yarn build:prod",
+    "build:prod": "webpack --config webpack.prod.js",
+    "build:net": "yarn clean:appData && webpack --config webpack.prod.net.js",
+    "transpile:appData": "webpack --config webpack.appData.js",
+    "clean:appData": "rimraf assets/local/appData.js",
+    "dev": "yarn clean:appData && yarn transpile:appData && yarn dev:local",
+    "dev:local": "webpack-dev-server --config webpack.local.js",
     "dev:build": "webpack --watch --config webpack.dev.js",
     "dev:server": "webpack --watch --config webpack.server.js",
-    "ssr-client": "concurrently \"yarn dev:build\" \"yarn dev:server\"",
-    "ssr-server": "nodemon  ./assets/local/server.js",
-    "lint": "tslint -c tslint.json 'src/**/*.{js,ts,tsx}'"
+    "ssr:client": "yarn clean:appData && concurrently \"yarn dev:build\" \"yarn dev:server\"",
+    "ssr:server": "nodemon  ./assets/local/server.js",
+    "lint": "eslint --ext=js,ts,tsx src --ext=js,ts,tsx client  --ext=js,ts,tsx server --ext=js,ts,tsx tests",
+    "lint:styles": "stylelint \"src/**/*.tsx\"",
+    "lint:fix": "yarn lint --fix",
+    "jest": "jest"
   },
   "author": {
     "name": "Ludovit Kapusta",
-    "email": "ludovit.kapusta@gmail.com"
+    "email": "lkapusta@actum.cz"
   },
   "license": "ISC",
   "dependencies": {
-    "@types/react-router-dom": "^4.3.4",
-    "@types/styled-components": "^4.1.18",
-    "express": "^4.16.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-router-dom": "^5.0.1"
+    "@loadable/component": "5.10.2",
+    "@types/react-redux": "7.1.5",
+    "@types/redux-logger": "3.0.7",
+    "core-js": "3.2.1",
+    "express": "4.17.1",
+    "polished": "3.4.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-redux": "7.1.3",
+    "react-router-dom": "5.0.1",
+    "react-slick": "0.25.2",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-logger": "3.0.6",
+    "rimraf": "3.0.0",
+    "slick-carousel": "1.8.1",
+    "style-loader": "1.0.0",
+    "styled-components": "4.3.2",
+    "styled-reboot": "4.0.3",
+    "stylelint": "11.0.0",
+    "stylelint-config-recommended": "3.0.0",
+    "stylelint-config-styled-components": "0.1.1",
+    "stylelint-order": "3.1.1",
+    "stylelint-processor-styled-components": "1.8.0",
+    "webpack": "4.39.2"
   },
   "devDependencies": {
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
-    "@types/webpack": "^4.4.21",
-    "awesome-typescript-loader": "^5.2.1",
-    "clean-webpack-plugin": "^1.0.0",
-    "concurrently": "^4.1.1",
-    "dotenv-webpack": "^1.7.0",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^0.5.2",
-    "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.18.10",
-    "prettier": "1.15.3",
-    "source-map-loader": "^0.2.4",
-    "styled-components": "^4.3.2",
-    "ts-loader": "^5.3.1",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react-hooks": "^2.0.0",
-    "typescript": "^3.2.2",
-    "typescript-plugin-styled-components": "^1.4.3",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2"
+    "@types/core-js": "2.5.2",
+    "@types/dotenv-webpack": "1.7.0",
+    "@types/express": "4.17.1",
+    "@types/html-minifier": "3.5.3",
+    "@types/jest": "24.0.18",
+    "@types/loadable__component": "5.10.0",
+    "@types/react": "16.9.35",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "4.3.5",
+    "@types/react-slick": "0.23.4",
+    "@types/react-test-renderer": "16.9.0",
+    "@types/styled-components": "4.1.18",
+    "@types/webpack": "4.39.1",
+    "@types/webpack-merge": "4.1.5",
+    "@types/webpack-node-externals": "1.6.3",
+    "@typescript-eslint/eslint-plugin": "2.9.0",
+    "@typescript-eslint/parser": "2.9.0",
+    "awesome-typescript-loader": "5.2.1",
+    "concurrently": "4.1.2",
+    "css-loader": "3.2.0",
+    "dotenv-webpack": "1.7.0",
+    "eslint": "6.4.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-import-resolver-webpack": "0.11.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.17.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-node": "10.0.0",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "2.0.1",
+    "eslint-plugin-sort-destructure-keys": "1.3.3",
+    "eslint-plugin-standard": "4.0.1",
+    "file-loader": "4.2.0",
+    "fork-ts-checker-webpack-plugin": "1.5.0",
+    "html-webpack-plugin": "3.2.0",
+    "jest": "24.9.0",
+    "nodemon": "1.19.1",
+    "prettier": "1.19.1",
+    "react-test-renderer": "16.9.0",
+    "source-map-loader": "0.2.4",
+    "svg-inline-loader": "0.8.0",
+    "ts-jest": "24.0.2",
+    "ts-loader": "6.0.4",
+    "typescript": "3.7.2",
+    "typescript-plugin-styled-components": "1.4.3",
+    "webpack-cli": "3.3.7",
+    "webpack-dev-server": "3.8.0",
+    "webpack-merge": "4.2.1",
+    "webpack-node-externals": "1.7.2"
   }
 }
