--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/redux-logger": "3.0.7",
     "core-js": "3.2.1",
     "express": "4.17.1",
+    "loadable": "^1.0.0",
     "polished": "3.4.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -60,7 +61,7 @@
     "@types/express": "4.17.1",
     "@types/html-minifier": "3.5.3",
     "@types/jest": "24.0.18",
-    "@types/loadable__component": "5.10.0",
+    "@types/loadable__component": "^5.10.0",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "4.3.5",
