--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,8 +45,7 @@
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
     "paths": {
-      "@components": ["src/components"],
-      "@routes/*": ["src/routes/*"],
+      "@components/*": ["src/components/*"],
       "@theme/*": ["src/theme/*"],
       "@widgets/*": ["src/widgets/*"],
       "@store/*": ["src/store/*"],
