--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "author": {
     "name": "Ludovit Kapusta",
-    "email": "lkapusta@actum.cz"
+    "email": "ludovit.kapusta@gmail.com"
   },
   "license": "ISC",
   "dependencies": {
